--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,154 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.tiles-list {
+  margin-top: 10px;
+}
+
+.tile {
+  text-align: center;
+  display: flex;
+  position: relative;
+  font-family: sans-serif;
+  padding: 10px;
+  width: 24%;
+  margin-left: 10px;
+  margin-bottom: 15px;
+  display: inline-block;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.tile:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.tile__fast-actions {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.tile__fast-actions_to-compare {
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 35px;
+}
+
+.tile__fast-actions_to-compare:hover {
+  background-color: #ff8119;
+  color: white;
+}
+
+.tile__fast-actions_to-favorites {
+  right: 10px;
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 35px;
+}
+
+.tile__fast-actions_to-favorites:hover {
+  background-color: #ff8119;
+  color: white;
+}
+
+.tile__picture {
+  width: 200px;
+  height: auto;
+  text-align: center;
+}
+
+.tile__info {
+  text-align: left;
+}
+
+.tile__info_description {
+  height: 80px;
+}
+
+.tile__info_price {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.tile__info_rating {
+  color: #f07511;
+}
+
+button {
+  cursor: pointer;
+}
+
+.tile__actions_one-click-buy-button {
+  width: 69%;
+  height: 40px;
+  border: none;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+.tile__actions_one-click-buy-button:hover {
+  background-color: #ff8119;
+  color: white;
+}
+
+.tile__actions_buy-button {
+  width: 29%;
+  height: 40px;
+  border: none;
+  background-color: #ff8119;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  color: white;
+  border-radius: 10px;
+  font-size: 15px;
+  margin-left: 5px;
+}
+
+.tile__actions_buy-button:hover {
+  background-color: #f07511;
+}
+
+.top-margin {
+  margin-top: 5px;
+}
+
+.lefter {
+  text-align: left;
+}
+
+@media(max-width:1366px) {
+  .tile {
+    min-width: 32%;
+  }
+}
+
+@media(max-width:1024px) {
+  .tile {
+    min-width: 48%;
+  }
+}
+
+@media(max-width:768px) {
+  .tile {
+    min-width: 100%;
+  }
+}
+
+@media(max-width:280px) {
+  .tile {
+    min-width: 280px;
+  }
+}
